--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<link rel="stylesheet" href="css/style.css" />
 		<title>Vélo'v Lyon - Location velo</title>
         <meta charset="utf-8" />
         <meta name="description"    content="Vélo'V, site de location de vélos sur Lyon" />
@@ -10,6 +9,8 @@
         <meta property="og:type"    content="website" />
         <meta property="og:url"     content="http://velov.lyon.ocgm-webagency.com/" />
         <meta property="og:image"   content="img/logo-velov.png" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="shortcut icon" href="img/favicon.png">
 	</head>
 	<body>
 		
