Added link GitHub

--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
 					<button id="bookedCancel" alt="Annuler réservation">&#10799;</button>
 				</div>
 			</div>
-			<p>©Openclassrooms - GM</p>
+			<p>
+				<span><sm>&copy; 2020 GM - OPC</span>
+            	<a href="https://github.com/GuillaumeM-OPC/VeloV" class="github p-2">GitHub</a>
+			</p>
 
 		</footer>
 
